Fortran/IBM/execute/F2008/intrinsics/error/unit_tests/erfc_scaled08.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erfc_scaled08.scenario
#FEATURE = F2008 ERFC_SCALED intrinsic
#CREATOR = Robert Enenkel & Bardia Mahjour
#DATE    = 20111114
#TEST_TYPE=unit
#ENDDOC

#BEGINCONTROL

#CMD       = F_COMPILE
#INPUT     = $(tcasedir)erfc_scaled08.f
#OPTS      = $(OPT_SET_STRICT_OPTIMIZATION)
#OUTPUT    = erfc_scaled08$(OBJ)
#ENDCMD

#CMD       = F_LINK
#INPUT     = erfc_scaled08$(OBJ)
#OPTS      = $(OPT_SET_STRICT_OPTIMIZATION)
#OUTPUT    = erfc_scaled08$(EXE)
#ENDCMD

#CMD       = COPY
#INPUT     = $(tcasedir)erfc_scaled08.dat
#OUTPUT    = erfc_scaled08.dat
#ENDCMD

#CMD       = RUN
#INPUT     = erfc_scaled08$(EXE)
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
